fix: CSS path resolution, Zod v4 issues API, Prisma schema field alignment, force-dynamic exports

--- a/src/app/web/landing.css
+++ b/src/app/web/landing.css
@@ -29,17 +29,6 @@ Table of Content:
 /*font Variables*/
 /*Color Variables*/
 /* Button Style */
-@import url(bootstrap.min.css);
-@import url("../../../use.fontawesome.com/releases/v5.5.0/css/all.css");
-@import url(font-awesome.min.css);
-@import url(../vendors/flat-icon/flaticon.css);
-@import url(../vendors/animate-css/animate.css);
-@import url(../vendors/owl-carousel/owl.carousel.min.css);
-@import url(../vendors/magnify-popup/magnific-popup.css);
-@import url(../vendors/jquery-ui/jquery-ui.min.css);
-@import url(../vendors/bootstrap-selector/nice-select.css);
-@import url(../vendors/lightbox/simpleLightbox.css);
-@import url(../vendors/meanMenu/meanmenu.css);
 @import url("https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@300;400;500;600;700&amp;display=swap");
 .theme_btn {
   color: #0d2841;
@@ -150,7 +139,7 @@ Table of Content:
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background: white url("../images/preloader.html") no-repeat center;
+  background: white url("/web/images/preloader.html") no-repeat center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -497,7 +486,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .banner_area::before {
   content: "";
   position: absolute;
-  background: url(../images/banner/ban_shap1.png) no-repeat left bottom;
+  background: url(/web/images/banner/ban_shap1.png) no-repeat left bottom;
   max-width: 982px;
   height: 456px;
   z-index: 1;
@@ -542,7 +531,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .ba_2::before {
   content: "";
   position: absolute;
-  background: url(../images/banner/ban_shap2.png) no-repeat left bottom;
+  background: url(/web/images/banner/ban_shap2.png) no-repeat left bottom;
   max-width: 1152px;
   height: 728px;
   z-index: 1;
@@ -568,7 +557,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 }
 .our_mission_area .mission_text::before {
   content: "";
-  background: url(../images/mission/mis_shap_bg1.png);
+  background: url(/web/images/mission/mis_shap_bg1.png);
   position: absolute;
   left: 7px;
   top: 3px;
@@ -586,14 +575,14 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
   margin-bottom: 10px;
 }
 .our_mission_area .mt_1::before {
-  background: url(../images/mission/mission2.png);
+  background: url(/web/images/mission/mission2.png);
   transition: all 300ms linear 0s;
 }
 .our_mission_area .mt_1:hover::before {
   transform: scale(0.9);
 }
 .our_mission_area .mt_01::before {
-  background: url(../images/mission/mission3.png);
+  background: url(/web/images/mission/mission3.png);
   transition: all 300ms linear 0s;
 }
 .our_mission_area .mt_01:hover::before {
@@ -641,7 +630,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .start_mining_area .mining_text::before {
   content: "";
   position: absolute;
-  background: url(../images/start/icon1.png) no-repeat;
+  background: url(/web/images/start/icon1.png) no-repeat;
   width: 36px;
   height: 37px;
   z-index: 2;
@@ -682,25 +671,25 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
   color: #17d984;
 }
 .start_mining_area .mt_3::before {
-  background: url(../images/start/icon2.png) no-repeat;
+  background: url(/web/images/start/icon2.png) no-repeat;
 }
 .start_mining_area .mt_4::before {
-  background: url(../images/start/icon3.png) no-repeat;
+  background: url(/web/images/start/icon3.png) no-repeat;
 }
 .start_mining_area .mt_5::before {
-  background: url(../images/start/icon4.png) no-repeat;
+  background: url(/web/images/start/icon4.png) no-repeat;
 }
 .start_mining_area .mt_6::before {
-  background: url(../images/start/icon5.png) no-repeat;
+  background: url(/web/images/start/icon5.png) no-repeat;
 }
 .start_mining_area .mt_7::before {
-  background: url(../images/start/icon6.png) no-repeat;
+  background: url(/web/images/start/icon6.png) no-repeat;
 }
 .start_mining_area .mt_8::before {
-  background: url(../images/start/icon7.png) no-repeat;
+  background: url(/web/images/start/icon7.png) no-repeat;
 }
 .start_mining_area .mt_9::before {
-  background: url(../images/start/icon8.png) no-repeat;
+  background: url(/web/images/start/icon8.png) no-repeat;
 }
 
 .make_bitcoin {
@@ -710,7 +699,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .make_bitcoin::before {
   position: absolute;
   content: "";
-  background: url(../images/invest/round_shap2.png) no-repeat;
+  background: url(/web/images/invest/round_shap2.png) no-repeat;
   left: 105px;
   width: 86px;
   height: 77px;
@@ -721,7 +710,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .make_bitcoin::after {
   position: absolute;
   content: "";
-  background: url(../images/invest/round_shap3.png) no-repeat;
+  background: url(/web/images/invest/round_shap3.png) no-repeat;
   right: 105px;
   width: 86px;
   height: 77px;
@@ -846,7 +835,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .our_roadmap_area::before {
   content: "";
   position: absolute;
-  background: url(../images/road/dot_shape.png) no-repeat;
+  background: url(/web/images/road/dot_shape.png) no-repeat;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -1067,7 +1056,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .faq_area::before {
   position: absolute;
   content: "";
-  background: url(../images/invest/plane_shap5.png) no-repeat;
+  background: url(/web/images/invest/plane_shap5.png) no-repeat;
   width: 74px;
   height: 74px;
   left: 0;
@@ -1078,7 +1067,7 @@ body a:focus, body a:hover, body .btn:focus, body .btn:hover, body button:focus,
 .faq_area::after {
   position: absolute;
   content: "";
-  background: url(../images/invest/round_shap4.png) no-repeat;
+  background: url(/web/images/invest/round_shap4.png) no-repeat;
   width: 74px;
   height: 74px;
   right: 150px;
